bk_ida/gccida/g3/add_fde_cfi
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/dwarf2out.c:1040:7: error: use of undeclared identifier 'label_num_59'
v15 = label_num_59; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/dwarf2out.c:1041:6: error: use of undeclared identifier 'label_58'; did you mean 'label_rtx'?
v3 = label_58; 
     ^~~~~~~~
     label_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/expr.h:580:12: note: 'label_rtx' declared here
extern rtx label_rtx PARAMS ((tree));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/dwarf2out.c:1042:3: error: use of undeclared identifier 'label_num_59'
++label_num_59; 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/dwarf2out.c:1043:10: error: use of undeclared identifier 'label_58'; did you mean 'label_rtx'?
sprintf( label_58, "*.%s%u", "LCFI", v15); 
         ^~~~~~~~
         label_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/expr.h:580:12: note: 'label_rtx' declared here
extern rtx label_rtx PARAMS ((tree));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/dwarf2out.c:1044:30: error: use of undeclared identifier 'label_58'; did you mean 'label_rtx'?
assemble_name( asm_out_file, label_58); 
                             ^~~~~~~~
                             label_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/expr.h:580:12: note: 'label_rtx' declared here
extern rtx label_rtx PARAMS ((tree));
           ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_fde_cfi/src/obj/dwarf2out.o] Error 1
